# SplineAR

./: .gitignore  CMakeLists.txt  Makefile  README.md
notes/: CProgramming.md  ExampleFile.xml  GL_and_CL.md
src/: config.h  main.cpp
src/Objects/Art/: point.cpp  point.h  stroke.cpp  stroke.h
src/Objects/Enum/: enums.cpp  enums.h
src/Objects/Input/: click.h  keystroke.h
src/Objects/Interface/: ui_manager.cpp  ui_manager.h  uiframe.cpp  uiframe.h  uilayer.cpp  uilayer.h
src/Objects/Interface/Information/: uilabel.cpp  uilabel.h
src/Objects/Tools/: brush.cpp  brush.h
src/Objects/Workspace/: workspace.cpp  workspace.h  workspace_interface.cpp  workspace_interface.h
src/Program/: fonts.cpp  fonts.h  gl_texture_handler.cpp  gl_texture_handler.h  gpu.cpp  gpu.h  gpu_memory.cpp  gpu_memory.h  input_manager.cpp  input_manager.h  save_load.cpp  save_load.h  thread_manager.cpp  thread_manager.h  ui_manager.cpp  ui_manager.h  window.cpp  window.h
src/Program/file/: filemanager.cpp  filemanager.h
src/Render/: pipeline.cpp  pipeline.h
src/Render/cl_headers/: matrix.h
src/Render/cl_kernels/: draw_stroke_outlines.cl  draw_strokes.cl  draw_strokes_two.cl  fill_strokes.cl  screen_uv.cl  test.cl  time_test.cl
src/Render/gl_shaders/: font.frag  font.vert
src/Render/shader/: shader_gl.cpp  shader_gl.h
src/Util/: gl_headers.h  math.h  vector.h
